Tweak it to run against Faraday's API
Changes include:

- Allow `description` and `example`.
- Correctly transpile `items`.
- Provide better errors when interface deserialization fails.
- Don't make `type` a list if it isn't already one in the input.

--- a/example_output.yml
+++ b/example_output.yml
@@ -39,9 +39,9 @@ components:
       type: object
       properties:
         comment:
-          type:
-            - string
-            - "null"
+          oneOf:
+            - type: string
+            - type: "null"
         name:
           type: string
       additionalProperties: false
