--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
 [package]
 name = "openapi-interfaces"
 version = "0.1.0"
+authors = ["Eric Kidd <git@randomhacks.net>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Generate OpenAPI schemas for related GET, POST, PUT and JSON Merge Patch types"
+categories = ["command-line-utilities", "web-programming", "ffi"]
+keywords = ["openapi", "schema", "json-merge-patch"]
+license = "Apache-2.0 OR MIT"
+readme = "README.md"
+homepage = "https://github.com/faradayio/openapi-interfaces"
+repository = "https://github.com/faradayio/openapi-interfaces"
+#documentation = ""
 
 [dev-dependencies]
 pretty_assertions = "0.7.2"
