--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,10 @@ codespan-reporting = "0.11.1"
 env_logger = "0.9.0"
 json-patch = "0.2.6"
 log = "0.4.14"
+semver = "1.0"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
+serde_with = "1.10.0"
 serde_yaml = "0.8.21"
 structopt = "0.3.23"
 termcolor = "1.1.2"
