--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openapi-interfaces"
-version = "0.2.1"
+version = "0.2.2-beta.1"
 authors = ["Eric Kidd <git@randomhacks.net>"]
 edition = "2018"
 
