Add fancy `title` and `description` to Merge Patch docs
This was proposed by Blake as a way to get much nicer documentation
using Readme.com.

Co-authored-by: Hana Kessler <hanakslr@users.noreply.github.com>

--- a/examples/example_output.yml
+++ b/examples/example_output.yml
@@ -41,7 +41,11 @@ components:
         comment:
           oneOf:
             - type: string
+              title: "Overwrite"
+              description: "Pass this value to overwrite the existing value."
             - type: "null"
+              title: "Clear"
+              description: "Pass `null` to clear this field's existing value."
         name:
           type: string
       additionalProperties: false
