--- a/examples/long_example_output.yml
+++ b/examples/long_example_output.yml
@@ -78,6 +78,7 @@ components:
         sku:
           type: string
         name:
+          description: "The name of this widget."
           type: string
         vendor_id:
           type: string
@@ -95,6 +96,7 @@ components:
         sku:
           type: string
         name:
+          description: "The name of this widget."
           type: string
         vendor_id:
           type: string
@@ -108,6 +110,7 @@ components:
         - metadata
       properties:
         name:
+          description: "The name of this widget."
           type: string
         metadata:
           $ref: "#/components/schemas/MetadataPut"
@@ -116,9 +119,14 @@ components:
       type: object
       properties:
         name:
+          description: "The name of this widget."
           oneOf:
             - type: string
+              title: "Overwrite"
+              description: "Pass this value to overwrite the existing value."
             - type: "null"
+              title: "Clear"
+              description: "Pass `null` to clear this field's existing value."
         metadata:
           $ref: "#/components/schemas/MetadataMergePatch"
       additionalProperties: false
