--- a/examples/oneof_example.yml
+++ b/examples/oneof_example.yml
@@ -6,27 +6,35 @@ info:
 paths: {}
 components:
   interfaces:
-    # A "oneOf" interface can be used to generate a TypeScript type union or
-    # a Rust enumeration, including the "Post", etc., variants.
+    # A "oneOf" interface can be used to generate a TypeScript type union or a
+    # Rust enumeration, including the "Post", etc., variants.
+    #
+    # This is not a superclass! It's a type union, using `|` in TypeScript to
+    # allow more than one type. This affects the design in several surprising
+    # ways. Among other things, we might have several union types that include
+    # different concrete interface types in their union. For example,
+    # `ShapeOptions`, `RoundishShapeOptions`, etc.
+    #
+    # We can only create a `oneOf` union of multiple interfaces if the
+    # individual types _all_ use the same discriminator member (see below).
     ShapeOptions:
       description: "Options for a shape."
       oneOf:
         - $interface: "SquareShapeOptions#SameAsInterface"
         - $interface: "RoundShapeOptions#SameAsInterface"
-      discriminator:
-        propertyName: type
-        mapping:
-          square: "SquareShapeOptions#SameAsInterface"
-          round: "RoundShapeOptions#SameAsInterface"
 
     SquareShapeOptions:
+      # The discriminator is a property of `SquareShapeOptions`, even if this
+      # type appears without being part of `ShapeOptions`. This is because it
+      # affects how the variants of this type get generated.
+      discriminatorMemberName: "type"
       members:
         type:
           required: true
           initializable: true
           schema:
             type: string
-            example: square
+            const: square
         height:
           required: true
           mutable: true
@@ -39,13 +47,14 @@ components:
             type: number
 
     RoundShapeOptions:
+      discriminatorMemberName: "type"
       members:
         type:
           required: true
           initializable: true
           schema:
             type: string
-            example: round
+            const: round
         radius:
           required: true
           mutable: true
