--- a/examples/oneof_example_output.yml
+++ b/examples/oneof_example_output.yml
@@ -57,13 +57,18 @@ components:
           type: number
         type:
           type: string
-          example: round
+          const: round
       additionalProperties: false
     RoundShapeOptionsMergePatch:
       type: object
+      required:
+        - type
       properties:
         radius:
           type: number
+        type:
+          type: string
+          const: round
       additionalProperties: false
     RoundShapeOptionsPost:
       type: object
@@ -75,7 +80,7 @@ components:
           type: number
         type:
           type: string
-          example: round
+          const: round
       additionalProperties: false
     RoundShapeOptionsPut:
       type: object
@@ -97,15 +102,20 @@ components:
           type: number
         type:
           type: string
-          example: square
+          const: square
         width:
           type: number
       additionalProperties: false
     SquareShapeOptionsMergePatch:
       type: object
+      required:
+        - type
       properties:
         height:
           type: number
+        type:
+          type: string
+          const: square
         width:
           type: number
       additionalProperties: false
@@ -120,7 +130,7 @@ components:
           type: number
         type:
           type: string
-          example: square
+          const: square
         width:
           type: number
       additionalProperties: false
