Include description in all interface variants (fixes #23)
- We copy `description` though, adding a note to each variant.
- We copy `title` through verbatim, which may not be what we want?

We still need to think about `title` and `description` handling a bit,
but this should unblock some urgent use cases.

--- a/examples/example.yml
+++ b/examples/example.yml
@@ -38,6 +38,8 @@ components:
     Widget:
       # Include all fields from `Resource`.
       $includes: "Resource"
+      description: |
+        A displayable widget.
       members:
         # We can override properties from `Resource` using JSON
         # Merge Patch syntax.
