--- a/examples/oneof_example.yml
+++ b/examples/oneof_example.yml
@@ -30,10 +30,12 @@ components:
       discriminatorMemberName: "type"
       members:
         type:
+          # The discriminator must be required and initializable, but not mutable.
           required: true
           initializable: true
           schema:
             type: string
+            # We must always use `const` here.
             const: square
         height:
           required: true
