--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openapi-interfaces"
-version = "0.3.0-rc.3"
+version = "0.3.0"
 authors = ["Eric Kidd <git@randomhacks.net>"]
 edition = "2018"
 
